--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vlf",
-    "version": "1.0.8-beta2",
+    "version": "1.0.8",
     "description": "vue-localforage",
     "main": "dist/vlf.js",
     "types": "src/index.d.ts",
